<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/m1" android:title="@string/edit_profile" android:icon="@drawable/ic_update"></item>
    <item android:id="@+id/m2" android:title="@string/lang" android:icon="@drawable/ic_language"></item>
    <item android:id="@+id/m3" android:title="@string/warehouse" android:icon="@drawable/ic_except_list"></item>
    <item android:id="@+id/m7" android:title="@string/warehouserecyclebin" android:icon="@drawable/ic_delete"></item>
    <item android:id="@+id/m4" android:title="@string/share" android:icon="@drawable/ic_share"></item>
    <item android:id="@+id/m5" android:title="@string/about" android:icon="@drawable/ic_about"></item>
    <item android:id="@+id/m6" android:title="@string/logout" android:icon="@drawable/ic_log_out"></item>
</menu>