<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/background_logout_massage"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/ic_crous"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginEnd="@dimen/_3sdp"
        android:id="@+id/cancle"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/massage1"
        android:fontFamily="@font/onumedium"
        android:text="@string/savedinwarehouse_massage1"
        android:textSize="@dimen/_11ssp"
        android:padding="@dimen/_5sdp"

        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/massage2"
        android:fontFamily="@font/onumedium"
        android:text="@string/savedinwarehouse_massage2"
        android:textSize="@dimen/_11ssp"
        android:padding="@dimen/_5sdp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/massage3"
        android:fontFamily="@font/onumedium"
        android:text="@string/savedinwarehouse_massage3"
        android:textSize="@dimen/_11ssp"
        android:padding="@dimen/_5sdp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/black"
        />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/onumedium"
            android:text="@string/saved_confirm"
            android:id="@+id/btn_yes"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_14ssp"
            android:background="@color/greann"
            android:textColor="#fff"
            android:foreground="?android:attr/selectableItemBackground"
            />


</LinearLayout>