<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/alerdialog_edit_background"
    tools:context=".Ui.Activity.Weight_Edit">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:background="@drawable/alerdialog_edit_background"
        android:paddingBottom="10dp"
        android:clipToPadding="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/alerdialog_edit_background"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:layout_gravity="center"
            android:orientation="vertical"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wiegth_edit_btn"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/black"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_35sdp"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_20sdp"
                tools:ignore="MissingConstraints">
                <EditText
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:id="@+id/name"
                    android:inputType="text"
                    app:fontFamily="@font/onumedium"
                    android:hint="@string/owner_name"
                    android:textSize="@dimen/_14ssp"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:background="@drawable/background_edittext"
                    android:textAlignment="viewStart"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_35sdp"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_20sdp"
                tools:ignore="MissingConstraints">
                <EditText
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:id="@+id/gold_wieght"
                    android:inputType="numberDecimal"
                    app:fontFamily="@font/onumedium"
                    android:hint="@string/gold_ingot_weigth"
                    android:textSize="@dimen/_14ssp"
                    android:drawableStart="@drawable/ic_gold_wieght"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:background="@drawable/background_edittext"
                    android:textAlignment="viewStart"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_35sdp"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_20sdp"
                tools:ignore="MissingConstraints">
                <EditText
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:id="@+id/sample_weight"
                    android:inputType="numberDecimal"
                    app:fontFamily="@font/onumedium"
                    android:hint="@string/sample_weight"
                    android:textSize="@dimen/_14ssp"
                    android:drawableStart="@drawable/ic_gold_simple_weight"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:background="@drawable/background_edittext"
                    android:textAlignment="viewStart"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_35sdp"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_20sdp"
                tools:ignore="MissingConstraints">
                <EditText
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:id="@+id/gold_karat_weight"
                    android:inputType="numberDecimal"
                    app:fontFamily="@font/onumedium"
                    android:hint="@string/caliber"
                    android:textSize="@dimen/_14ssp"
                    android:drawableStart="@drawable/ic_gold_kat_weight"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:background="@drawable/background_edittext"
                    android:textAlignment="viewStart"
                    />
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:text="@string/optional"
                android:layout_marginTop="@dimen/_14sdp"
                android:textColor="@color/red"
                app:fontFamily="@font/onumedium"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_35sdp"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/_4sdp"
                tools:ignore="MissingConstraints">
                <EditText
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:id="@+id/price_gram"
                    android:inputType="numberDecimal"
                    app:fontFamily="@font/onumedium"
                    android:hint="@string/price_gram"
                    android:textSize="@dimen/_14ssp"
                    android:drawableStart="@drawable/ic_cash"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:background="@drawable/background_edittext"
                    android:textAlignment="viewStart"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_35sdp"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:foreground="?android:attr/selectableItemBackground"
                tools:ignore="MissingConstraints">
                <Button
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:text="@string/wiegth_edit_btn"
                    app:fontFamily="@font/onumedium"
                    android:id="@+id/btn_upd"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:layout_gravity="center"
                    android:background="@drawable/background_button_register"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="btn_add"
                    tools:ignore="OnClick" />
            </androidx.cardview.widget.CardView>

        </LinearLayout >
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>