<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".Ui.Activity.SendOtp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/ic_send_otp"
            android:layout_marginTop="@dimen/_minus20sdp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verification_code"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/title_verification_code"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black1"
            android:textSize="@dimen/_12ssp"
            />
        <EditText
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_40sdp"
            android:id="@+id/ed_enterphonenumber"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:hint="@string/enter_phone"
            android:inputType="number"
            android:maxLength="9"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="@dimen/_5sdp"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:background="@drawable/background_edittext_otp"
            android:textAlignment="viewStart"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:layout_gravity="end"
            android:gravity="end"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/textwatchercounter"
                android:gravity="end"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/textwatchertotal"
                android:gravity="end"
                android:text="/9"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            >
        <Button
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/send"
            android:id="@+id/btn_send"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:layout_gravity="center"
            android:background="@drawable/background_button_register"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="btn_login"
            tools:ignore="OnClick" />
            <ProgressBar
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:id="@+id/progressbar"
                android:layout_gravity="center"
                android:visibility="gone"
                />
        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>