<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.Activity.Reset_Password">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcomeback"
            android:textStyle="bold"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/colorPrimary"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_35sdp"
            app:cardCornerRadius="10dp"
            app:cardElevation="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_20sdp"
            tools:ignore="MissingConstraints">
            <EditText
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_35sdp"
                android:id="@+id/phone"
                android:inputType="number"
                android:maxLength="10"
                app:fontFamily="@font/onumedium"
                android:hint="@string/phonereg"
                android:textSize="@dimen/_14ssp"
                android:drawableStart="@drawable/ic_phone_num"
                android:drawablePadding="@dimen/_10sdp"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:background="@drawable/background_edittext"
                android:textAlignment="viewStart"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_35sdp"
            app:cardCornerRadius="10dp"
            app:cardElevation="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_20sdp"
            tools:ignore="MissingConstraints">
            <EditText
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_35sdp"
                android:id="@+id/password"
                android:inputType="textPassword"
                app:fontFamily="@font/onumedium"
                android:hint="@string/newpass"
                android:textSize="@dimen/_14ssp"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="@dimen/_10sdp"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:background="@drawable/background_edittext"
                android:textAlignment="viewStart"
                />
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:paddingEnd="@dimen/_10sdp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/visibiltyoff"
                    android:visibility="visible"
                    android:src="@drawable/ic_visibiltyoff"
                    android:layout_gravity="center|end"
                    android:onClick="Visibiltyoff_Password"
                    tools:ignore="OnClick" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/visibilty"
                    android:visibility="invisible"
                    android:src="@drawable/ic_visibilty"
                    android:layout_gravity="center|end"
                    android:onClick="Visibilty_Password"
                    tools:ignore="OnClick" />
            </FrameLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_35sdp"
            app:cardCornerRadius="10dp"
            app:cardElevation="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:foreground="?android:attr/selectableItemBackground"
            tools:ignore="MissingConstraints">
            <Button
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_35sdp"
                android:text="@string/edit_profile_btn"
                app:fontFamily="@font/onumedium"
                android:id="@+id/btn_login"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:layout_gravity="center"
                android:background="@drawable/background_button_register"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="btn_login"
                tools:ignore="OnClick" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>